numpy plot with ndarrays

--- a/pyplot.ipynb
+++ b/pyplot.ipynb
@@ -44,6 +44,36 @@
     "plt.plot(x2, y2, label='second plot')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 100\n",
+    "x = np.linspace(0, 20, num)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.random.rand(num)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(x, y)"
+   ]
   }
  ],
  "metadata": {
