numpy scatter plot imshow() pixels

--- a/scatter.ipynb
+++ b/scatter.ipynb
@@ -21,6 +21,28 @@
     "data = np.random.rand(4, num)\n",
     "print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(data[0], data[1], c=data[2], s=data[3]*1000, alpha=0.3, cmap='viridis')\n",
+    "plt.colorbar() #show color scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 500\n",
+    "data = np.random.rand(num, num)\n",
+    "plt.imshow(data, cmap='binary')\n",
+    "plt.colorbar()"
+   ]
   }
  ],
  "metadata": {
