smmoother sine function

--- a/ufuncs.ipynb
+++ b/ufuncs.ipynb
@@ -30,6 +30,28 @@
     "y = np.sin(x)\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resolution = 100\n",
+    "frequency = 2\n",
+    "x = np.linspace(0, 2 * np.pi, resolution)\n",
+    "y = np.sin(x * frequency)\n",
+    "plt.plot(x, y)"
+   ]
   }
  ],
  "metadata": {
