--- a/ufuncs.ipynb
+++ b/ufuncs.ipynb
@@ -52,6 +52,17 @@
     "y = np.sin(x * frequency)\n",
     "plt.plot(x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y1 = np.sin(x * 6)\n",
+    "y2 = np.sin(x * 9)\n",
+    "plt.plot(x, y1 + y2)"
+   ]
   }
  ],
  "metadata": {
