tables and customer query

--- a/SQL-1.ipynb
+++ b/SQL-1.ipynb
@@ -29,6 +29,37 @@
     "  df = pd.read_sql(sql_query, con)\n",
     "  return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "  SELECT *\n",
+    "  FROM sqlite_master\n",
+    "  WHERE type = 'table'\n",
+    "'''\n",
+    "\n",
+    "tables = sql_to_df(query)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "  SELECT first_name, last_name\n",
+    "  FROM customer\n",
+    "'''\n",
+    "\n",
+    "customer_names = sql_to_df(query)\n",
+    "customer_names"
+   ]
   }
  ],
  "metadata": {
