pastry films query

--- a/SQL-1.ipynb
+++ b/SQL-1.ipynb
@@ -60,6 +60,59 @@
     "customer_names = sql_to_df(query)\n",
     "customer_names"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(customer_names.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(customer_names.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(customer_names.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(customer_names.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "  SELECT *\n",
+    "  FROM film\n",
+    "  WHERE description\n",
+    "  LIKE '%Pastry%'\n",
+    "'''\n",
+    "\n",
+    "pastry_films = sql_to_df(query)\n",
+    "pastry_films"
+   ]
   }
  ],
  "metadata": {
