--- a/SQL-1.ipynb
+++ b/SQL-1.ipynb
@@ -113,6 +113,36 @@
     "pastry_films = sql_to_df(query)\n",
     "pastry_films"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "  SELECT \n",
+    "    COUNT(title) AS Count,\n",
+    "    rating\n",
+    "  FROM film\n",
+    "  WHERE description\n",
+    "  LIKE '%Pastry%'\n",
+    "  GROUP BY rating\n",
+    "  ORDER BY Count DESC;\n",
+    "'''\n",
+    "\n",
+    "pastry_films_by_rating = sql_to_df(query)\n",
+    "pastry_films_by_rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pastry_films_by_rating.hist(column='Count', grid=False)"
+   ]
   }
  ],
  "metadata": {
