sales per month advanced data visualization pie chart

--- a/SQL-2.ipynb
+++ b/SQL-2.ipynb
@@ -125,6 +125,24 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explode = np.zeros(len(categories_by_gross[\"category_name\"]))\n",
+    "explode[0] = 0.1\n",
+    "print(explode)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(categories_by_gross[\"revenue\"].round(3), explode=explode, labels=categories_by_gross[\"category_name\"],\n",
+    "      autopct='%1.1f%%', shadow=True, startangle=90)\n",
+    "ax.axis('equal') #equal aspect ratio ensures that the pie is drawn as a circle\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
