adult pastry data visualization pie chart

--- a/SQL-2.ipynb
+++ b/SQL-2.ipynb
@@ -143,6 +143,48 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "  SELECT\n",
+    "    COUNT(title) AS Count,\n",
+    "    rating AS Rating\n",
+    "  FROM film\n",
+    "  WHERE description\n",
+    "  LIKE '%Pastry%'\n",
+    "  GROUP BY rating\n",
+    "  ORDER BY Count DESC;\n",
+    "'''\n",
+    "\n",
+    "df = sql_to_df(query)\n",
+    "df.set_index('Rating', inplace=True)\n",
+    "\n",
+    "num_adult_pastry = df.loc['NC-17', 'Count']\n",
+    "total = df['Count'].sum()\n",
+    "labels = ['all other', 'adult pastry']\n",
+    "nums = np.array([total, num_adult_pastry])\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explode = [0, 0.2]\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.pie(nums, labels=labels, explode=explode, shadow=True)\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
