artwork by classification

--- a/moma_viz.ipynb
+++ b/moma_viz.ipynb
@@ -2,16 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "RufbmPsDHQLB"
+      },
       "source": [
         "# Week 4 Workshop Assignment Notebook\n",
         "`  `"
-      ],
-      "metadata": {
-        "id": "RufbmPsDHQLB"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "x8hP2gDry_oJ"
+      },
       "source": [
         "\n",
         "\n",
@@ -24,19 +27,16 @@
         "If afterward at any point, your connection to the runtime is lost, make sure once you re-connect that the **momaviz.sql** file still exists in the file browser. If it no longer exists, upload it again. If any of the green check marks are gone next to the code cells in this ENVIRONMENT SETUP section, start from the top and re-run all the cells in this section.\n",
         "\n",
         "The code cells within the section for each task can be run independently of each other, as long as all ENVIRONMENT SETUP cells have been run. "
-      ],
-      "metadata": {
-        "id": "x8hP2gDry_oJ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The following cell is used to install and start a Postgres server:"
-      ],
       "metadata": {
         "id": "vD5kZibDyr8g"
-      }
+      },
+      "source": [
+        "The following cell is used to install and start a Postgres server:"
+      ]
     },
     {
       "cell_type": "code",
@@ -53,12 +53,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The next two cells will drop the **moma** database on that Postgres server, if it exists, and create a new one:"
-      ],
       "metadata": {
         "id": "Og0Z7ICKyy6L"
-      }
+      },
+      "source": [
+        "The next two cells will drop the **moma** database on that Postgres server, if it exists, and create a new one:"
+      ]
     },
     {
       "cell_type": "code",
@@ -84,12 +84,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Next, run the following cell to add data from moma_viz.sql to the moma database:"
-      ],
       "metadata": {
         "id": "3apAwDu-y744"
-      }
+      },
+      "source": [
+        "Next, run the following cell to add data from moma_viz.sql to the moma database:"
+      ]
     },
     {
       "cell_type": "code",
@@ -104,12 +104,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Run the following cell to update the default password for the Postgres database:"
-      ],
       "metadata": {
         "id": "j_ye3c5uzzMo"
-      }
+      },
+      "source": [
+        "Run the following cell to update the default password for the Postgres database:"
+      ]
     },
     {
       "cell_type": "code",
@@ -124,12 +124,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Finally, run the following cell to import the packages you'll use in this exercise, and open a database connection and cursor to the Postgres server with psycopg. You will see a UserWarning about the psycopg2 wheel package. You can ignore this warning, as long as you see a green check mark after running the cell."
-      ],
       "metadata": {
         "id": "pAK_iAvVz7U0"
-      }
+      },
+      "source": [
+        "Finally, run the following cell to import the packages you'll use in this exercise, and open a database connection and cursor to the Postgres server with psycopg. You will see a UserWarning about the psycopg2 wheel package. You can ignore this warning, as long as you see a green check mark after running the cell."
+      ]
     },
     {
       "cell_type": "code",
@@ -152,28 +152,31 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Run the following cell to make available the same sql_to_df function you have used in this week's exercises:"
-      ],
       "metadata": {
         "id": "RWNA6Gxv2HDF"
-      }
+      },
+      "source": [
+        "Run the following cell to make available the same sql_to_df function you have used in this week's exercises:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yHUsiQ9oon-b"
+      },
+      "outputs": [],
       "source": [
         "def sql_to_df(sql_query: str):\n",
         "    \"\"\"Get result set of sql_query as a pandas DataFrame.\"\"\"\n",
         "    return pd.read_sql(sql_query, conn)"
-      ],
-      "metadata": {
-        "id": "yHUsiQ9oon-b"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "18FUBGx9EB7d"
+      },
       "source": [
         "`  `\n",
         "\n",
@@ -181,20 +184,17 @@
         "\n",
         "\n",
         "## TASK 1 - ARTWORKS BY DEPARTMENT"
-      ],
-      "metadata": {
-        "id": "18FUBGx9EB7d"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Fu_IcUqh-hPo"
+      },
       "source": [
         "Run the following cell to test the SQL query you devised in Task 1: Part 1. \n",
         "For this task, the query has been provided for you as an example, so you do not need to do anything except run the cell. And of course, examine the query and do your best to understand how it works!"
-      ],
-      "metadata": {
-        "id": "Fu_IcUqh-hPo"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -222,12 +222,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Take the query (the part inside the multiline string (\"\"\" \"\"\") in the previous cell) and paste it inside the multiline string (\"\"\" \"\"\") in the next cell, then run it:"
-      ],
       "metadata": {
         "id": "Hqf-em7h_52m"
-      }
+      },
+      "source": [
+        "Take the query (the part inside the multiline string (\"\"\" \"\"\") in the previous cell) and paste it inside the multiline string (\"\"\" \"\"\") in the next cell, then run it:"
+      ]
     },
     {
       "cell_type": "code",
@@ -241,7 +241,10 @@
         "\n",
         "title = \"Artworks by Department\"\n",
         "query = \"\"\"\n",
-        "\n",
+        "        SELECT department, COUNT(*)\n",
+        "        FROM moma_works\n",
+        "        GROUP BY department\n",
+        "        ORDER BY count DESC;\n",
         "        \"\"\"\n",
         "\n",
         "dataframe = sql_to_df(query)\n",
@@ -266,46 +269,49 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "gVlIJQy6C0Z6"
+      },
       "source": [
         "`  `\n",
         "\n",
         "---\n",
         "## TASK 2 - ARTISTS BY CLASSIFICATION"
-      ],
-      "metadata": {
-        "id": "gVlIJQy6C0Z6"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "852pH3xIH5_v"
+      },
       "source": [
         "Task 2: Part 1 in the workshop assignment instructions provides you with a description of an SQL query to construct.\n",
         "Once you are ready to test your query, enter it inside the multiline string of the code cell below, and run it. "
-      ],
-      "metadata": {
-        "id": "852pH3xIH5_v"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2JC59qtpEUQB"
+      },
+      "outputs": [],
       "source": [
         "# Task 2: Part 2 - Test your query\n",
         "\n",
         "cur.execute(\n",
         "    \"\"\"\n",
-        "\n",
+        "    SELECT classification, COUNT(*)\n",
+        "    FROM moma_works\n",
+        "    GROUP BY classification\n",
+        "    ORDER BY count DESC;\n",
         "    \"\"\"\n",
         ")\n",
         "\n",
         "works = cur.fetchall()\n",
         "for w in works:\n",
         "  print(w)"
-      ],
-      "metadata": {
-        "id": "2JC59qtpEUQB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -319,7 +325,10 @@
         "\n",
         "title = \"Artworks by Classification\"\n",
         "query = \"\"\"\n",
-        "\n",
+        "        SELECT classification, COUNT(*)\n",
+        "        FROM moma_works\n",
+        "        GROUP BY classification\n",
+        "        ORDER BY count DESC;\n",
         "        \"\"\"\n",
         "\n",
         "dataframe = sql_to_df(query)\n",
@@ -338,18 +347,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9hcf9P3XLkLF"
+      },
       "source": [
         "`  `\n",
         "\n",
         "---\n",
         "## TASK 3 - ARTISTS BY NATIONALITY"
-      ],
-      "metadata": {
-        "id": "9hcf9P3XLkLF"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WzP3f6gcLnFA"
+      },
+      "outputs": [],
       "source": [
         "# Task 3: Part 2 - Test your query\n",
         "\n",
@@ -362,12 +376,7 @@
         "artists = cur.fetchall()\n",
         "for a in artists:\n",
         "  print(a)"
-      ],
-      "metadata": {
-        "id": "WzP3f6gcLnFA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -399,18 +408,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "D60OIxMYPmGy"
+      },
       "source": [
         "`  `\n",
         "\n",
         "---\n",
         "## TASK 4 - ARTISTS BY GENDER"
-      ],
-      "metadata": {
-        "id": "D60OIxMYPmGy"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uuX86DATPqd1"
+      },
+      "outputs": [],
       "source": [
         "# Task 4: Part 2 - Test your query\n",
         "\n",
@@ -423,12 +437,7 @@
         "artists = cur.fetchall()\n",
         "for a in artists:\n",
         "  print(a)"
-      ],
-      "metadata": {
-        "id": "uuX86DATPqd1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -464,6 +473,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "h7bDTe79a1oz"
+      },
       "source": [
         "`  `\n",
         "\n",
@@ -471,10 +483,7 @@
         "## TASK 5 - BONUS\n",
         "\n",
         "This is an optional task. For this task, the code has been completed for you. Your task is to run the cell, examine the SQL query and the results, and come up with an appropriate title and assign it to the value of the title variable. You can compare it with the solution shown in the bonus task instructions. "
-      ],
-      "metadata": {
-        "id": "h7bDTe79a1oz"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -519,6 +528,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3pKadREmbR8M"
+      },
       "source": [
         "`  `\n",
         "\n",
@@ -528,18 +540,15 @@
         "\n",
         "## SUBMISSION\n",
         "Once all non-bonus tasks are completed, download the .py version of this Notebook to your computer by going to **File > Download > Download .py**. Submit the downloaded **moma_viz.py** file in the learning portal."
-      ],
-      "metadata": {
-        "id": "3pKadREmbR8M"
-      }
+      ]
     }
   ],
   "metadata": {
     "colab": {
+      "collapsed_sections": [],
       "name": "moma_viz.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "collapsed_sections": []
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
