artists by nationality

--- a/moma_viz.ipynb
+++ b/moma_viz.ipynb
@@ -369,7 +369,12 @@
         "\n",
         "cur.execute(\n",
         "    \"\"\"\n",
-        "\n",
+        "    SELECT info->'nationality' AS nationality, COUNT(*)\n",
+        "    FROM moma_artists\n",
+        "    WHERE info->>'nationality' IS NOT NULL\n",
+        "    GROUP BY nationality\n",
+        "    ORDER BY count DESC\n",
+        "    LIMIT 10;\n",
         "    \"\"\"\n",
         ")\n",
         "\n",
@@ -390,7 +395,12 @@
         "\n",
         "title = \"Artists by Nationality\"\n",
         "query = \"\"\"\n",
-        "\n",
+        "        SELECT info->'nationality' AS nationality, COUNT(*)\n",
+        "        FROM moma_artists\n",
+        "         WHERE info->>'nationality' IS NOT NULL\n",
+        "        GROUP BY nationality\n",
+        "        ORDER BY count DESC\n",
+        "        LIMIT 10;\n",
         "        \"\"\"\n",
         "\n",
         "dataframe = sql_to_df(query)\n",
