artists by gender

--- a/moma_viz.ipynb
+++ b/moma_viz.ipynb
@@ -440,7 +440,11 @@
         "\n",
         "cur.execute(\n",
         "    \"\"\"\n",
-        "\n",
+        "    SELECT info->'gender' AS gender, COUNT(*)\n",
+        "    FROM moma_artists\n",
+        "    WHERE info->>'gender' IS NOT NULL\n",
+        "    GROUP BY gender\n",
+        "    ORDER BY gender;\n",
         "    \"\"\"\n",
         ")\n",
         "\n",
@@ -461,7 +465,11 @@
         "\n",
         "title = \"Artists by Gender\"\n",
         "query = \"\"\"\n",
-        "\n",
+        "    SELECT info->'gender' AS gender, COUNT(*)\n",
+        "    FROM moma_artists\n",
+        "    WHERE info->>'gender' IS NOT NULL\n",
+        "    GROUP BY gender\n",
+        "    ORDER BY gender;\n",
         "        \"\"\"\n",
         "\n",
         "dataframe = sql_to_df(query)\n",
